align buttons on update post, comment, write stories pages and fix errors indicated by html validation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,10 @@ a:hover {
   height: 90px;
 }
 
+.featured-img {
+  width: 100%;
+}
+
 .item-left {
   padding-right: 20px;
 }
@@ -99,7 +103,40 @@ a:hover {
   margin-top: 0;
 }
 
-/*   -- index.html --  */
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 0;
+}
+
+.social-networks {
+  list-style: none;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.btn-submit {
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  border-radius: 0.3rem;
+  background-color: rgb(141, 111, 56);
+  border: none;
+  color: #fff;
+}
+
+.btn-right {
+  margin-left: 5px;
+}
+
+/*   ------------ index.html ------------------------  */
 h1 {
   font-family: 'Montserrat Alternates', sans-serif;
   font-size: 3rem;
@@ -133,11 +170,11 @@ h1 {
   margin-right: 3px;
 }
 
-.more-posts {
+.links-to-posts {
   margin-top: 50px;
  }
 
-.more-posts p {
+.links-to-posts p {
   font-size: 1.4rem;
 }
 
@@ -145,7 +182,7 @@ h1 {
   margin-top: 20px;
 }
 
-/* post_detail.html */
+/* -------------- post_detail.html -------------------*/
 
 .date-city > ul {
   list-style: none;
@@ -170,51 +207,19 @@ h1 {
   padding-top: 0;
 }
 
-.btn-submit {
-  padding: 0.5rem 1rem;
-  font-size: 1.25rem;
-  border-radius: 0.3rem;
-  background-color: rgb(141, 111, 56);
-  border: none;
-  color: #fff;
-}
-
-.btn-right {
-  margin-left: 10px;
-}
-
 .image-wrapper {
   width: 100%;
   aspect-ratio: 3 / 2;
 }
 
-footer {
-  width: 100%;
-  height: 60px;
-  background-color: #ccc;
-  position: absolute;
-  bottom: 0;
-}
-
-.social-networks {
-  list-style: none;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
-/* Write Stories, Update Posts and Update Comments */
+/* --------- Write Stories, Update Posts and Update Comments ------ */
 
 .form-section {
   min-height: 880px;
 }
 
-/* account login */
+/* --------- account login -----------------------*/
+
 .btn-sign-in {
   display: block;
 }
@@ -224,13 +229,17 @@ footer {
   width: 500px;
 }
 
-/* search.html */
+/* ---------- search.html -------------------------*/
 
 .item-right {
   margin-left: 10px;
 }
 
-/* update_post.html  */
+/* ----------- update_post.html -------------------*/
+
+.update-post-btn {
+  margin-right: 5px;
+}
 
 .cancel {
   padding: 0.7rem 1rem;
@@ -241,7 +250,13 @@ footer {
   color: #fff;
 }
 
-/* my page -----------*/
+/* ---------------- update comment ---------------------*/
+.cancel-comment {
+  position: relative;
+  top: 3px;
+}
+
+/* ---------------- my page -----------*/
 .show-posts {
   margin-top: 50px;
 }
@@ -288,11 +303,12 @@ footer {
     display: none;
   }
 
-  .more-posts {
+  /* -------- index --------------- */
+  .links-to-posts {
     margin-top: 0;
    }
 
-  .more-posts p {
+  .links-to-posts p {
     font-size: 1.1rem;
   }
 
@@ -304,7 +320,7 @@ footer {
     margin-top: 10px;
   }
 
-  /* post_detail.html */
+  /* ------- post_detail.html --------------*/
   .item-left {
     padding-right: 0;
   }
@@ -316,7 +332,7 @@ footer {
   .img-box {
     width: 100%;
   }
-  /* my page ---------*/
+  /* --------- my page ----------------------*/
   .show-posts {
     margin-top: 0;
   }
@@ -364,7 +380,7 @@ footer {
     margin-top: 20px;
   }
 
-  /* post_detail.html */
+  /* --------- post_detail.html ----------------------*/
   section {
     width: 80%;
     margin: 0 auto;
@@ -378,7 +394,7 @@ footer {
 }
 
 @media screen and (max-width: 575px) {
-  .search-contnet {
+  .search-content {
     width: 80%;
   }
 
@@ -401,21 +417,28 @@ footer {
     font-size: 2.5rem;
   }
   
-  /* ------ index.html ----------*/
+  /* ------ index.html ----------------------*/
   .earth {
     width: 30%;
     height: auto;
     padding-left: 15px;
   }
 
-  /* ------- Update Post ---------*/
-  .update-post-btns {
+  /* ------- Update Post ------------------------*/
+  .update-post-btn-box {
     display: flex;
     flex-direction: column;
+    width: 165px;
+    margin: 0 auto;
   }
 
-  .btn-submit {
-    width: 200px;
+  .update-post-btn {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+
+  .cancel {
+    margin: 5 auto;
   }
 }
 
